# aynux-ai-platform

./: .dockerignore  .env.example  .env.test  .gitignore  AGENT_SCHEMA_MIGRATION.md  ANALYSIS_CODE_QUALITY.md  ANALYSIS_DOCUMENTATION.md  ANALYSIS_SUMMARY.md  CHANGELOG.md  CLAUDE.md  DYNAMIC_AGENT_IMPLEMENTATION.md  DYNAMIC_DATA_PIPELINE_ARCHITECTURE.md  Dockerfile  GEMINI.md  LANGGRAPH_ARCHITECTURE.md  LANGGRAPH_INTEGRATION.md  LANGSMITH_TROUBLESHOOTING.md  LEGACY_CLEANUP_STATUS.md  MIGRATION_STATUS.md  Makefile  MercadoPago.md  PDF_VECTOR_SERVICE_README.md  PRODUCT_SEARCH_IMPROVEMENTS.md  README.md  README_ARCHITECTURE.md  SCHEMA_MIGRATION_FIXES.md  TESTING_GUIDE.md  VISUALIZER_QUICKSTART.md  WARP.md  analyze_pyright_errors.py  check_embedding_progress.sh  conversation_test_langgraph_20250611_112427.json  conversation_test_langgraph_20250611_113126.json  conversation_test_langgraph_20250611_113600.json  conversation_test_langgraph_20250611_114313.json  conversation_test_langgraph_20250611_120754.json  conversation_test_langgraph_20250611_121142.json  conversation_test_langgraph_20250611_122743.json  conversation_test_langgraph_20250611_123110.json  conversation_test_langgraph_20250612_000150.json  (+39 more)
.claude/agents/: docs-reviewer.md  langsmith-engineer.md  streamlit-architect.md
.github/workflows/: deploy.yml  test.yml
alembic/: env.py
alembic/sql/: 001_schema.sql  001_seed_data.sql  002_workflow_schema.sql  002_workflow_seed_data.sql
alembic/versions/: 001_baseline.py  002_workflow_schema.py  003_fix_cancelar_escape_intent.py  004_add_awaiting_type_metadata.py  005_add_menu_escape_intents.py  061df17a83c1_drop_support_tickets_table.py  142e9279af3f_add_debt_manager_response_configs.py  36f513c8cce8_add_organization_id_to_contact_domains.py  a8i3j45k678l_migrate_embeddings_768_to_1024.py  aa1b2c3d4e5f_seed_response_configs_org1.py  aa8i3j45k678l_unify_intent_pattern_tables.py  ad98b04fa4ed_initial_schema_migration.py  b9j4k56l789m_add_isolated_history_to_bypass_rules.py  c9k5l67m890p_create_intent_config_tables.py  cc0k5l67m890n_drop_legacy_pharmacy_intent_tables.py  d0k6m78n901p_create_domains_table.py  df60b7014e72_rename_pharmacy_response_configs_to_.py  e9c2be43fb21_add_bot_service_hours_to_pharmacy_config.py  ee4f5g6h7i8j_seed_domain_intents_org1.py  ff5g6h7i8j9k_seed_intent_configs_org1.py  h9b4d23e678c_add_pharmacy_merchant_configs.py  i0c5e34f789d_enable_pgcrypto_extension.py  j1d6f45g890e_create_tenant_credentials_table.py  k2e7g56h901f_seed_excelencia_credentials.py  l3f8h67i012g_create_agent_knowledge_table.py  m4g9i78j123h_convert_timestamps_to_timezone_aware.py  n5h0j89k234i_add_embedding_updated_at.py  nn3o4p5q6r7s_add_account_selection_system_org.py  o6i1k90l345j_seed_admin_user.py  pp5q6r7s8t9u_add_missing_response_configs_org1.py  r9l4n23o678m_allow_multiple_pharmacies_per_org.py  s0m5n34o789n_add_pharmacy_bypass_rule_link.py  ss8t9u0v1w2x_create_routing_configs_table.py  t1a5b67c890d_create_software_modules_table.py  t1n6o45p890o_create_soporte_schema_and_tables.py  y6g1h23i456j_create_rag_query_logs_table.py  z7h2i34j567k_add_pharmacy_info_fields.py
app/: NEW_ARCHITECTURE_README.md  __init__.py  main.py
app/agents/: __init__.py  base_agent.py  doubts_agent.py  graph.py  greeting_agent.py  product_inquiry_agent.py  promotions_agent.py  recommendation_agent.py  sales_agent.py  state_schema.py  stock_agent.py  unknown_agent.py
app/api/: dependencies.py  exception_handlers.py  pharmacy_auth.py  router.py
app/clients/: __init__.py  dux_api_client.py  dux_facturas_client.py  dux_rubros_client.py  mercado_pago_client.py  pharmacy_erp_client.py  plex_client.py
app/config/: __init__.py  agent_capabilities.py  langgraph_config.py  langsmith_config.py  langsmith_init.py  model_capabilities.py  products_config.py  seed_models.json  settings.py
app/core/: README.md  __init__.py  agent_manager.py  app_factory.py  background_services.py  circuit_breaker.py  container.py  lifecycle.py  message_batcher.py  multilayer_cache.py  performance_monitor.py
app/database/: __init__.py  setup.py  (+3 more)
backup/: aynux_backup_20260115_111852.dump  seed_data.sql
docs/: 1_basic_chat.md  2_add_tools.md  3_add_memory.md  4_add-human-in-loop.md  5_customize-state.md  6_time-travel.md  7_hierarchical_agent_teams.md  8_multi_agent_network.md  9_agent_supervisor.md  ADMIN_USER_MANAGEMENT.md  API_PGVECTOR_ENDPOINTS.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_PROPOSAL.md  BOTPRESS_STYLE_AGENT_SYSTEM_PLAN.md  BYPASS_RULES_API.md  CHATTIGO.md  CODE_REVIEW_SUMMARY.md  DATABASE_SCHEMA.md  DEPRECATED_SERVICES.md  DOCKER_DEPLOYMENT.md  DOMAIN_IMPLEMENTATION_GUIDE.md  FINAL_MIGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  ISV_CHATTIGO.md  KNOWLEDGE.md  KNOWLEDGE_API_CODE_REVIEW.md  KNOWLEDGE_API_DEPLOYMENT_PLAN.md  LANGSMITH_TROUBLESHOOTING.md  LEGACY_CLEANUP_STATUS.md  LangGraph.md  MIGRATION_ACTION_PLAN.md  MIGRATION_STATUS.md  MULTI_TENANCY.md  PDF_VECTOR_STORAGE_SERVICE.md  PGVECTOR_MIGRATION.md  PGVECTOR_QUICKSTART.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_8A_COMPLETION_SUMMARY.md  PHASE_8B_COMPLETION_SUMMARY.md  PHASE_8_INTEGRATION_PLAN.md  (+18 more)
scripts/: init-db.sql  langsmith_evaluation_examples.py  modernize_type_hints.py  register_webhook.py  test_chattigo.py  test_chattigo_outbound.py  test_chattigo_phone_formats.py  test_chattigo_specific.py  test_deepseek_llm.py  test_pharmacy_agent.py
streamlit_admin/: app.py
tests/: README.md  conftest.py  monitoring_dashboard.py  readme.md  test_agent_enablement.py  test_chat_interactive.py  test_document_upload.py  test_greeting_multi_domain.py  test_intent_analyzer.py  test_json_extractor.py  test_langsmith_verification.py  test_migrated_prompts.py  test_pgvector_integration.py  test_phone_normalizer_pydantic.py  test_product_agent_json.py  test_product_base_classes.py  test_product_models.py  test_prompt_service.py  test_prompt_system.py  test_scenarios.py  test_search_strategies.py  test_tenant_agent_factory.py  test_whatsapp_api_endpoints.py  test_whatsapp_catalog.py  test_whatsapp_flows.py  test_whatsapp_simulator.py
todo/: refactoring.md
(+1514 files in other folders)
