[project]
name = "aynux"
version = "0.1.0"
description = "Bot multi-dominio con agentes especializados configurables"
authors = [
    { name = "Leonardo Illanez", email = "leonardoilla777@icloud.com" }
]
# readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "redis>=6.0.0",
    "qrcode>=8.2",
    "pillow>=11.2.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.9.1",
    "uvicorn>=0.34.2",
    "google-generativeai>=0.8.5",
    "python-multipart>=0.0.20",
    "python-jose>=3.4.0",
    "email-validator>=2.2.0",
    "bcrypt>=4.3.0",
    "bson>=0.5.10",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.10",
    "langchain-core>=0.3.62",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.24",
    "langchain-text-splitters>=0.3.8",
    "langchain-experimental>=0.3.4",
    "asyncpg>=0.30.0",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-postgres>=2.0.6",
    "opentelemetry-api>=1.28.2",
    "opentelemetry-sdk>=1.28.2",
    "opentelemetry-exporter-prometheus>=0.49b2",
    "opentelemetry-instrumentation-logging>=0.49b2",
    "structlog>=24.4.0",
    "cryptography>=44.0.0",
    "pyjwt>=2.10.1",
    "greenlet>=3.2.3",
    "sentry-sdk[fastapi]>=2.30.0",
    "langsmith>=0.1.137",
    "langchain>=0.3.0",
    "spacy>=3.8.0,<4.0.0",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "es_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl",
    "pgvector>=0.4.1",
    "streamlit>=1.39.0",
    "graphviz>=0.20.3",
    "pypdf>=5.1.0",
    "alembic>=1.13.0",
    "nest-asyncio>=1.6.0",
    "fpdf2>=2.8.0",  # PDF receipt generation
]

[dependency-groups]
dev = [
    "black>=24.2.0",
    "isort>=5.13.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.2",
    "sqlalchemy-stubs>=0.4",
    "types-sqlalchemy>=1.4.53.38",
    "pyright>=1.1.402",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
select = ["E", "F", "B", "I"]
line-length = 120
target-version = "py312"

[tool.pyright]
# Enable basic type checking mode (step towards standard)
typeCheckingMode = "basic"

# Progressive type checking - enable checks gradually
reportUnnecessaryTypeIgnoreComment = false  # Keep disabled for now
reportOptionalMemberAccess = "warning"  # Upgraded from false to warning
reportCallIssue = "warning"  # Upgraded from false to warning
reportArgumentType = "warning"  # Upgraded from false to warning
reportGeneralTypeIssues = "warning"

# Type inference settings
strictListInference = true
strictDictionaryInference = true
strictSetInference = true

# Include and exclude patterns
include = ["app/**"]
exclude = ["**/__pycache__", "**/alembic/**", "**/node_modules/**", "**/.venv/**"]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/alembic/*",
    "*/migrations/*",
    "*/conftest.py",
    "*/dev-*.sh",
    "*/run_*.sh",
    "*/streamlit_*.py",
    "app/main.py",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
